--- a/config.env
+++ b/config.env
@@ -18,8 +18,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=android12-release
-CLANG_VERSION=r416183b
+CLANG_BRANCH=android10-release
+CLANG_VERSION=r353983c
 
 # GCC
 ENABLE_GCC_ARM64=true
